--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             function endQuiz() {
                 quizScreen.classList.remove('visible');
                 endScreen.classList.add('visible');
-                finalMessageElement.innerText = "Je hebt de speurtocht voltooid! Gefeliciteerd!";
+                finalMessageElement.innerText = "Je hebt de speurtocht voltooid! Gefeliciteerd! Ga in de woonkamer zoeken voor je laatste 2 kado's";
             }
 
             startBtn.addEventListener('click', startQuiz);
